--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -43,8 +43,9 @@ nav a {
     background-position: center;
     text-align: center;
     padding: 5rem 2rem;
-    color: black;
+    color: white;
     font-weight: 900;
+    text-shadow: black 2px 2px 2px;
 }
 
 .hero-text h1 {
