--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -544,3 +544,11 @@ footer a {
     width: 100%;
     height: 100%;
 }
+@media (min-width: 1440px) {
+    body{
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
